--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="70NuuT1LpT0uGdSk6grCyls0H3MTlbMZLvKAU-n3EU0" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>TeesBead</title>
     <meta content="" name="description">
     <meta content="" name="keywords">  
@@ -15,7 +16,7 @@
 <body>
     <!-- Header Section -->
     <header>
-        <img src="tee-removebg-preview.png" alt="">
+        <img src="tee-removebg-preview.png" alt="" style="z-index: 100;"> 
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -107,12 +108,26 @@
         <p>Phone: 08103697278</p>
         <p>Phone: <a href="tel:08103697278">08103697278</a></p>
         <p>Email: <a href="mailto:wahabtitlope122@gmail.com">wahabtitlope122@gmail.com</a></p>
-        <p>Address: Shop 12, Bead Market, Lagos</p>
+        <!-- <p>Address: Shop 12, Bead Market, Lagos</p> -->
     </section>
 
+
+
+    <div class="social-icons">
+        <!-- WhatsApp Icon -->
+        <a href="https://wa.me/message/ZD7L7VGGFHZKK1" target="_blank" class="whatsapp-icon">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+    
+        <!-- TikTok Icon -->
+        <a href="https://www.tiktok.com/@teesbead?_t=ZM-8ssEKW2rI17&_r=1" target="_blank" class="tiktok-icon">
+            <i class="fab fa-tiktok"></i>
+        </a>
+    </div>
+            
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Tees Bead. All rights reserved.</p>
+        <p>&copy; 2025 Tees Bead. All rights reserved.</p>
     </footer>
 
 </body>
